--- a/_layouts/cv.html
+++ b/_layouts/cv.html
@@ -10,14 +10,14 @@ layout: default
       {% if page.description %}<p class="post-description">{{ page.description }}</p>{% endif %}
   </header>
 
-  <h4>Table of contents</h4>
+  <!-- <h4>Table of contents</h4>
   <ul class="timeline">
   {% for entry in site.data.cv %}
     <li><a href="#{{ entry.title }}"><span class="badge-toc">{{ entry.title }}</span></a></li>
   {% endfor %}
   </ul>
 
-  <!-- <article>
+  <article>
     <div class="cv">
       {% for entry in site.data.cv %}
         <a class="anchor" id="{{ entry.title }}"></a>
@@ -41,7 +41,7 @@ layout: default
         </div>
       {% endfor %}
       </div>
-  </article> -->
+  </article>
 
 </div>
 {% else %}
@@ -67,7 +67,7 @@ layout: default
   {% endfor %}
   </ul>
 
-  <!-- <article>
+  <article>
     <div class="cv">
       {% for data in site.data.resume %}
         {% if site.jsonresume and site.jsonresume.size > 0 %}
